--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-numpy~=1.24.3
-torchvision~=0.18.1
-pillow~=10.4.0
-matplotlib~=3.7.5
-opencv-python~=4.10.0.84
+torch
+torchvision
+tensorboard
+scipy==1.2.1
+numpy==1.17.0
+matplotlib==3.1.2
+opencv_python==4.1.2.30
+tqdm==4.60.0
+Pillow==8.2.0
+h5py==2.10.0
